-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
-
1d8e1f677 (dev)
When changing the graphs, there is a crash due to input handler.
Step :
- Open widgetgraphgallery example
- Open Surface tab
- Switching among graph types
- Crashed
For Gerrit Dashboard: QTBUG-113823 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
480457,5 | Fix crash when changing input handler | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |