Fix crash when changing input handler

Fixes: QTBUG-113823
Fixes: QTBUG-113816
Change-Id: Ica5e587fdcf884301e2e74f996f0825ba7d47777
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Dilek Akcay <dilek.akcay@qt.io>